fix overflow scroll bar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,20 @@
     -webkit-user-select: none; /* Safari */
     user-select: none;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 6px; /* Width of the scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Background of the track (scrollbar background) */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888; /* Scrollbar thumb (the part that you drag) */
+    border-radius: 4px; /* Rounded edges */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Scrollbar thumb on hover */
+}
